--- a/href.html
+++ b/href.html
@@ -15,7 +15,7 @@
     <h2>A basic html table</h2>
     <table style="width:75%">
         <tr>
-            <th>College</th>
+            <th colspan="2">College</th>
             <th>City</th>
             <th>Country</th>
           </tr>
