--- a/href.html
+++ b/href.html
@@ -16,7 +16,7 @@
     <table style="width:75%">
         <tr>
             <th colspan="2">College</th>
-            <th>City</th>
+            <th>city</th>
             <th>Country</th>
           </tr>
           <tr>
