--- a/16-05(array).html
+++ b/16-05(array).html
@@ -89,19 +89,19 @@ function display(event)
 {
        switch(event){
        case "Push":
-       food.push("Tiger");
+       animals.push("Tiger");
        document.getElementById("push1").innerHTML = animals;
        break;
        case "Pop":
-       food.pop();
+       animals.pop();
        document.getElementById("pop1").innerHTML = animals;
        break;
        case "Shift":
-       food.shift();
+       animals.shift();
        document.getElementById("shift1").innerHTML = animals;
        break;
        case "Unshift":
-       food.unshift("Horse");
+       animals.unshift("Horse");
        document.getElementById("unshift1").innerHTML = animals;
        break;
        case "Concat":
